# kivy1_11_playground

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: ch_001_hello_kivy.py  ch_003_event.py  ch_004_part1_pure_python.py  ch_006_kv.py  ch_007_animated_bg_kv.py  ch_009_joystick.py
kivy_demo/: ch_002_login_screen.py  ch_004_part2_kv.py  ch_005_part1_custom_layouts_pure_python.py  ch_005_part2_custom_layouts_kv.py  ch_008_camera_error_handle.py
